Image Upload via Cloudinary

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,17 +3,17 @@
 	<div class="container">
 		<header class="jumbotron">
 			<div class="container">
-				<h1>Welcome to YelpCamp</h1>
-				<p>View our hand-picked campgrounds from everywhere</p>
+				<h1>Welcome to FHfashion</h1>
+				<p>Check out the player customizations for all your favorite characters!</p>
 				<p>
-					<a class="btn-primary btn-lg" href="campgrounds/new">Add New CampGround</a>
+					<a class="btn-primary btn-lg" href="campgrounds/new">Add New Customization</a>
 				</p>
 			</div>
 		</header>
 
 		<div class="row">
 			<div class="col-lg-12">
-				<h3>Most Popular Campground</h3>
+				<h3>Most Popular Fashion</h3>
 			</div>
 		</div>
 		
