--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -10,7 +10,7 @@ body{
 }
 
 #landing-header h1 {
-  color: #fff;
+  color: red;
 }
 
 .slideshow { 
@@ -40,22 +40,22 @@ body{
 }
 
 .slideshow li:nth-child(1) { 
-  background-image: url(http://i.imgur.com/K3mPv14.jpg) 
+  background-image: url(https://res.cloudinary.com/tiandi/image/upload/v1601088823/Y4S3_liiusw.jpg) 
 }
 .slideshow li:nth-child(2) { 
-  background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+  background-image: url(https://res.cloudinary.com/tiandi/image/upload/v1601089176/Y1Title2_j0om1a.jpg);
   animation-delay: 10s; 
 }
 .slideshow li:nth-child(3) { 
-  background-image: url(http://i.imgur.com/emvhOnb.jpg);
+  background-image: url(https://res.cloudinary.com/tiandi/image/upload/v1601088811/Y4S2_imte3e.jpg);
   animation-delay: 20s; 
 }
 .slideshow li:nth-child(4) { 
-  background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+  background-image: url(https://res.cloudinary.com/tiandi/image/upload/v1601088819/Y4_twiazr.jpg);
   animation-delay: 30s; 
 }
 .slideshow li:nth-child(5) { 
-  background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  background-image: url(https://res.cloudinary.com/tiandi/image/upload/v1601089177/Y1Title1_k74nt6.jpg);
   animation-delay: 40s; 
 }
 
