--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,21 +2,20 @@
 
 <div class="container">
 	<div class="row">
-		<h1 style="text-align:center;">
-			Create a New Campground
-		</h1>
+		<h1 style="text-align:center;">Create a New Campground</h1>
 		<div style="width:30%; margin:25px auto;">
-			<form action ="/campgrounds" method="POST">
+			<form action ="/campgrounds" method="POST" enctype="multipart/form-data">
 				<div class="form-group">
-					<input class="form-control" type="text" name="name" placeholder="name">
+					<input class="form-control" type="text" name="campground[name]" placeholder="name" required>
 				</div>
 				
 				<div class="form-group">
-					<input class="form-control" type="text" name="image" placeholder="image url">
-				</div>
+                    <label for="image">Image</label>
+                    <input type="file" id="image" name="image" accept="image/*" required>
+                </div>
 				
 				<div class="form-group">
-					<input class="form-control" type="text" name="description" placeholder="description">
+					<input class="form-control" type="text" name="campground[description]" placeholder="Add some description">
 				</div>
 				
 				<div class="form-group">
@@ -27,7 +26,5 @@
 		</div>
 	</div>	
 </div>
-
-
 
 <%- include("../partials/footer") %>
