--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,10 +10,11 @@
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="/">YelpCamp</a>
+					<a class="navbar-brand" href="/">FHfashion</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
+						<li><a href="/campgrounds">Main Page</a></li>
 						<% if(!currentUser){ %>
 							<li><a href="/login">Login</a></li>
 							<li><a href="/register">Register</a></li>
