--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -15,7 +15,7 @@
                 </div>
 				
 				<div class="form-group">
-					<input class="form-control" type="text" name="campground[description]" placeholder="Add some description">
+					<input class="form-control" type="text" name="campground[description]" placeholder="Add some description!">
 				</div>
 				
 				<div class="form-group">
