--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -6,17 +6,21 @@
 			Edit <strong><%= campground.name %></strong>
 		</h1>
 		<div style="width:30%; margin:25px auto;">
-			<form action ="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+			<form action ="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 				<div class="form-group">
-					<input class="form-control" type="text" name="camp[name]" value="<%= campground.name %>">
+					<!--edit name-->
+					<input class="form-control" type="text" name="name" value="<%= campground.name %>">
 				</div>
 				
 				<div class="form-group">
-					<input class="form-control" type="text" name="camp[image]" value="<%= campground.image %>">
-				</div>
+					<!--edit image-->
+                    <label for="image">Image</label>
+                    <input type="file" id="image" name="image" accept="image/*">
+                </div>
 				
 				<div class="form-group">
-					<input class="form-control" type="text" name="camp[description]" value="<%= campground.description %>">
+					<!--edit description-->
+					<input class="form-control" type="text" name="description" value="<%= campground.description %>">
 				</div>
 				
 				<div class="form-group">
