--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,11 +2,11 @@
 
 <div class="container">
 	<div class="row">
-		<h1 style="text-align:center;">Create a New Campground</h1>
+		<h1 style="text-align:center;">Upload your hero customization!</h1>
 		<div style="width:30%; margin:25px auto;">
 			<form action ="/campgrounds" method="POST" enctype="multipart/form-data">
 				<div class="form-group">
-					<input class="form-control" type="text" name="campground[name]" placeholder="name" required>
+					<input class="form-control" type="text" name="campground[name]" placeholder="name (<30 characters)" maxlength="30" required>
 				</div>
 				
 				<div class="form-group">
@@ -15,7 +15,7 @@
                 </div>
 				
 				<div class="form-group">
-					<input class="form-control" type="text" name="campground[description]" placeholder="Add some description!">
+					<textarea class="form-control" type="text" name="campground[description]" placeholder="Add some description! (<500 characters)" rows="5" cols="50" maxlength="500"></textarea>
 				</div>
 				
 				<div class="form-group">
