--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -7,14 +7,14 @@
 		<div style="width:30%; margin:25px auto;">
 			<form action ="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
 				<div class="form-group">
-					<input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+					<textarea class="form-control" type="text" name="comment[text]" rows="5" cols="50" maxlength="100"><%= comment.text %></textarea>
 				</div>
 				
 				<div class="form-group">
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds">Back</a>
+			<a href="/campgrounds/<%= campground_id %>">Back</a>
 		</div>
 	</div>	
 </div>
