--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,6 +1,4 @@
-
 <%- include("../partials/header") %>
-<h1>NEW COMMENT FORM!!!</h1>
 <div class="container">
 	<div class="row">
 		<h1 style="text-align:center;">
@@ -9,14 +7,14 @@
 		<div style="width:30%; margin:25px auto;">
 			<form action ="/campgrounds/<%= campground._id %>/comments" method="POST">
 				<div class="form-group">
-					<input class="form-control" type="text" name="comment[text]" placeholder="text">
+					<textarea class="form-control" type="text" name="comment[text]" placeholder="Type your comment! (<100 characters)" rows="5" cols="50" maxlength="100"></textarea>
 				</div>
 				
 				<div class="form-group">
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds">Back</a>
+			<a href="/campgrounds/<%= campground._id %>">Back</a>
 		</div>
 	</div>	
 </div>
