--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -14,7 +14,7 @@
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds/<%= campground_id %>">Back</a>
+			<a href="/campgrounds/<%= campground_id %>" class="back-button">Back</a>
 		</div>
 	</div>	
 </div>
