--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,50 @@
-.thumbnail {
+label{
+	font-weight: bold;
+	font-size:1.5em;
+	/*float: left;*/
+	color: darkorange;
+}
+
+.title-text{
+	width:100%;
+	margin:auto;
+	height: 1.6em;
+	font-size:1.3em;
+}
+
+.post-form{
+	width:60%; 
+	margin:25px auto;
+}
+
+.image-preview{
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+	width:100%;
+}
+
+.form-control {
+	background-color : black;
+	color:white;
+}
+
+.center-align{
+	text-align: center;
+}
+
+body{
+	background-color:dimgrey;
+	color:white;
+}
+
+.jumbotron{
+	background-color: black;
+}
+
+.thumbnail{
+	background-color:grey;
+	border:1px solid black;
 	padding:0
 }
 
@@ -12,4 +58,14 @@
 
 .delete-form{
 	display:inline;
+}
+
+.back-button{
+	color:darkblue;
+	font-size: 1.4em;
+}
+
+.well{
+	background-color: grey;
+	color:white;
 }
