--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,7 +6,7 @@
 				<h1>Welcome to FHfashion</h1>
 				<p>Check out the player customizations for all your favorite characters!</p>
 				<p>
-					<a class="btn-primary btn-lg" href="campgrounds/new">Add New Customization</a>
+					<a class="btn-success btn-lg" href="campgrounds/new">Add New Customization</a>
 				</p>
 			</div>
 		</header>
@@ -23,10 +23,11 @@
 					<div class="thumbnail">
 						<img src= " <%= campground.image %> " >
 						<div class="caption">
-							<h4> <%= campground.name %> </h4>
+							<h3> <b><%= campground.name %> </b></h3>
+							<h4> By: <em><%= campground.author.username %></em> </h4>
 						</div>
 						<p>
-							<a href="/campgrounds/<%= campground._id%>" class="btn btn-primary">More Info</a>
+							<a href="/campgrounds/<%= campground._id%>" class="btn btn-primary">View Detail</a>
 						</p>
 					</div>
 				</div>
