--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,16 +2,17 @@
 
 <div class="container">
 	<div class="row">
-		<h1 style="text-align:center;">Upload your hero customization!</h1>
-		<div style="width:30%; margin:25px auto;">
+		<h1 style="text-align:center;">Upload your customization!</h1>
+		<div class="post-form">
 			<form action ="/campgrounds" method="POST" enctype="multipart/form-data">
 				<div class="form-group">
-					<input class="form-control" type="text" name="campground[name]" placeholder="name (<30 characters)" maxlength="30" required>
+					<input class="form-control title-text" type="text" name="campground[name]" placeholder="name (<30 characters)" maxlength="30" required>
 				</div>
 				
 				<div class="form-group">
-                    <label for="image">Image</label>
-                    <input type="file" id="image" name="image" accept="image/*" required>
+					<label for="image">Upload Image:</label>
+					<input type="file" id="image" name="image" accept="image/*" onchange="previewFile(this);" required >
+					<img id="previewImg" src="#" alt="your image" class="image-preview">
                 </div>
 				
 				<div class="form-group">
@@ -22,7 +23,7 @@
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds">Back</a>
+			<a href="/campgrounds" class="back-button">Back</a>
 		</div>
 	</div>	
 </div>
