--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,12 +3,12 @@
 	<div class="row">
 		<div class="col-md-3">
 			<p class="lead">
-				Character Customizations
+				Character Customization
 			</p>
 			<div class="list-group"> 
 				<li class="list-group-item active">Photo 1</li>
 				<li class="list-group-item">Photo 2</li>
-				<li class="list-group-item">Photo 3</li>
+				<li class="list-group-item active">Photo 3</li>
 			</div>
 		</div>
 		<div class="col-md-9">
@@ -16,7 +16,7 @@
 				<img class="img-responsive" src="<%= campground.image %>">
 				<div class="caption-full">
 					<h4 class="pull-right">Character</h4>
-					<h4><a><%=campground.name%></a></h4>
+					<h4><b><%=campground.name%></b></h4>
 					<p><%=campground.description%></p>
 					<p>
 						<em>Submitted By <%= campground.author.username %></em>
@@ -37,7 +37,7 @@
 				<% campground.comments.forEach(function(comment){ %>
 					<div class="row">
 						<div class="col-md-12">
-							<strong><%=comment.author.username%></strong>
+							<strong><em><%=comment.author.username%></em></strong>
 							<span class="pull-right">10 days ago</span>
 							<p>
 								<%=comment.text%>
