--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,7 +23,7 @@
     
     <div id="landing-header">
  		<h1>Welcome to FHfashion!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Customizations</a>
+		<a href="/campgrounds" class="btn btn-lg btn-info">View All Customizations</a>
     </div>
     
     <ul class="slideshow">
