--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
 		<title>FHfashion</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/main.css">
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="/javascript/main.js"></script>
 	</head>
 	<body>
 		
