--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -21,14 +21,14 @@
 				
 				<div class="form-group">
 					<!--edit description-->
-					<textarea class="form-control" type="text" name="description" placeholder="Add some description! (<500 characters)" rows="5" cols="50" maxlength="500"><%= campground.description %></textarea>
+					<textarea class="form-control" type="text" name="description" placeholder="Add some description! (<600 characters)" rows="5" cols="50" maxlength="600"><%= campground.description %></textarea>
 				</div>
 				
 				<div class="form-group">
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds" class="back-button">Back</a>
+			<a href="/campgrounds" class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true">Back</a>
 		</div>
 	</div>	
 </div>
