--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,8 +22,8 @@
     </div>
     
     <div id="landing-header">
- 		<h1>Welcome to FHfashion!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-info">View All Customizations</a>
+ 		<h1>Welcome to <span class="title-logo">FHfashion!</span></h1>
+		<a href="/campgrounds" class="btn btn-lg btn-info">View Customizations</a>
     </div>
     
     <ul class="slideshow">
