--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
 					<button class="btn btn-lg btn-primary btn-block">Sign Up</button>
 				</div>
 			</form>
-			<a href="/campgrounds">Go Back</a>
+			<a href="/campgrounds" class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true">Back</a>
 		</div>
 	</div>
 </div>
