--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,15 +5,15 @@
 			<div class="container">
 				<h1>Welcome to FHfashion</h1>
 				<p>Check out the player customizations for all your favorite characters!</p>
-				<p>
-					<a class="btn-success btn-lg" href="campgrounds/new">Add New Customization</a>
-				</p>
 			</div>
 		</header>
 
 		<div class="row">
 			<div class="col-lg-12">
-				<h3>Most Popular Fashion</h3>
+				<p>
+					<a class="btn-success btn-lg" href="campgrounds/new">Add New Customization</a>
+				</p>
+				<h3>Most Popular Fashions</h3>
 			</div>
 		</div>
 		
