--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -16,14 +16,14 @@
                 </div>
 				
 				<div class="form-group">
-					<textarea class="form-control" type="text" name="campground[description]" placeholder="Add some description! (<500 characters)" rows="5" cols="50" maxlength="500"></textarea>
+					<textarea class="form-control" type="text" name="campground[description]" placeholder="Add some description! (<600 characters)" rows="5" cols="50" maxlength="600"></textarea>
 				</div>
 				
 				<div class="form-group">
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds" class="back-button">Back</a>
+			<a href="/campgrounds" class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
 		</div>
 	</div>	
 </div>
