--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -7,14 +7,14 @@
 		<div style="width:30%; margin:25px auto;">
 			<form action ="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
 				<div class="form-group">
-					<textarea class="form-control" type="text" name="comment[text]" rows="5" cols="50" maxlength="100"><%= comment.text %></textarea>
+					<textarea class="form-control" type="text" name="comment[text]" placeholder="Type your comment! (<150 characters)" rows="5" cols="50" maxlength="150"><%= comment.text %></textarea>
 				</div>
 				
 				<div class="form-group">
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds/<%= campground_id %>" class="back-button">Back</a>
+			<a href="/campgrounds/<%= campground_id %>" class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true">Back</a>
 		</div>
 	</div>	
 </div>
