--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -7,14 +7,14 @@
 		<div style="width:30%; margin:25px auto;">
 			<form action ="/campgrounds/<%= campground._id %>/comments" method="POST">
 				<div class="form-group">
-					<textarea class="form-control" type="text" name="comment[text]" placeholder="Type your comment! (<100 characters)" rows="5" cols="50" maxlength="100"></textarea>
+					<textarea class="form-control" type="text" name="comment[text]" placeholder="Type your comment! (<150 characters)" rows="5" cols="50" maxlength="150"></textarea>
 				</div>
 				
 				<div class="form-group">
 					<button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
 				</div>
 			</form>
-			<a href="/campgrounds/<%= campground._id %>" class="back-button">Back</a>
+			<a href="/campgrounds/<%= campground._id %>" class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true">Back</a>
 		</div>
 	</div>	
 </div>
