--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,9 +12,15 @@
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-info" aria-expanded="false">
+				        <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+			    	</button>
 					<a class="navbar-brand" href="/">FHfashion</a>
 				</div>
-				<div class="collapse navbar-collapse">
+				<div class="collapse navbar-collapse" id="bs-nav-info">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="/campgrounds">Main Page</a></li>
 						<% if(!currentUser){ %>
